hard-gists/5924965/run.log
=== Docker Run Log for 5924965 ===
Started at: Mi 29. Okt 16:10:33 CET 2025

[2025-10-29 16:10:34] START: Running container for 5924965
[2025-10-29 16:10:34] SUCCESS: Container 6f0103dfc3f98e806ea8273752f60f3736c6cefe5caff32b1adea23ba536b970 started for 5924965
=== Container logs for 5924965 ===
  File "/snippet.py", line 360
    if comp <> None:
            ^^
SyntaxError: invalid syntax
=== End of logs for 5924965 ===
[2025-10-29 16:10:36] INFO: Container 6f0103dfc3f98e806ea8273752f60f3736c6cefe5caff32b1adea23ba536b970 has stopped
